# vpn_bgp

./: CMakeLists.txt  README.md  bird.conf  db.example.com  dns_resolver.cpp  keepalived-ns1.conf  keepalived-ns2.conf  mikrotik-privkey  mikrotik-pubkey  update-routes.service  update-routes.timer  update_routes.py  wg0.conf
